食材告警系统: 四级状态枚举 + 三层堆缓存 + 已读确认 + 定时推送
- IngredientStatus: EXPIRED(0)/URGENT(1)/WARNING(2)/NORMAL(3) 动态计算
- IngredientHeapCache: 三堆缓存(内存/Redis双实现), 全量刷新+增量同步
- readed确认: 单条/批量标记, expireDate变更自动重置
- IngredientSchedulerService: 30天全量+每日迁移+微信订阅推送
- H2内存数据库: 249 tests 全绿, Mapper集成测试无MySQL依赖
- UserInfo: address/age字段全链路
- 文档更新: 接口文档+技术文档+AGENTS.md